# dexi-bench

./: .gitignore  README.md  pyproject.toml
dexi_bench/: compare.py  platform.py
dexi_bench/monitors/: __init__.py  base.py  samplers.py
dexi_bench/profilers/: __init__.py  thermal.py  thermal_compare.py
dexi_bench/runners/: apriltag_runner.py  yolo_runner.py
dexi_bench/schema/: result.py
docs/: BAG_RECORDING.md  DESIGN.md
results/cm5/profiles/: 2026-06-30_67a40c7_thermal_fan.csv  2026-06-30_67a40c7_thermal_fan.json  2026-06-30_67a40c7_thermal_takeoff.csv  2026-06-30_67a40c7_thermal_takeoff.json  2026-06-30_d52f1d9_thermal_fan.csv  2026-06-30_d52f1d9_thermal_fan.json  2026-06-30_d52f1d9_thermal_takeoff.csv  2026-06-30_d52f1d9_thermal_takeoff.json
