[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dexi-bench"
version = "0.0.1"
description = "Cross-platform performance benchmarking harness for Dexi drone packages"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Dennis Baldwin", email = "db@droneblocks.io" }]
requires-python = ">=3.10"
dependencies = [
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = ["pytest>=7"]
# For bench-thermal --fc-url (flight-controller board temp over MAVLink).
fc = ["pymavlink>=2.4"]

[project.scripts]
bench-yolo = "dexi_bench.runners.yolo_runner:main"
bench-apriltag = "dexi_bench.runners.apriltag_runner:main"
bench-compare = "dexi_bench.compare:main"
bench-thermal = "dexi_bench.profilers.thermal:main"
bench-thermal-compare = "dexi_bench.profilers.thermal_compare:main"

[tool.setuptools.packages.find]
include = ["dexi_bench*"]
exclude = ["results*", "config*", "docs*"]
